# AutoMCP

./: .env.example  .gitignore  README.md  pyproject.toml
apps/cli/: main.py  review.py  sessions.py  test_tool.py
apps/web/: server.py
apps/web/templates/: dashboard.html
core/: config.py
core/analyzer/: drift_detector.py  endpoint_clusterer.py  event_classifier.py  schema_inferrer.py  tool_spec_builder.py
core/auth/: cookies.py  csrf.py  headers.py  session_health.py  storage_tokens.py  vault.py
core/codegen/: python_mcp_generator.py  validator.py
core/codegen/templates/: server_init.py.jinja2  tool.py.jinja2
core/recorder/: action_mapper.py  browser_session.py  dom_snapshot.py  network_capture.py
core/runtime/: middleware.py  server.py  tool_loader.py  tool_registry.py
core/storage/: db.py  models.py
