[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automcp"
version = "2.0.0"
description = "AutoMCP 2.0 — Browser-to-MCP tool generator"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.4",
    "anthropic>=0.30.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
automcp = "apps.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["apps", "core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
